moved stylesheet back in

--- a/www.microsoft.com/en-us/corporate-responsibility/inclusive-economic-opportunity.html
+++ b/www.microsoft.com/en-us/corporate-responsibility/inclusive-economic-opportunity.html
@@ -51,10 +51,10 @@
 
 
     <link rel="stylesheet"
-        href="https://www.microsoft.com/mwf/css/MWF_20210208_31270267/west-european/default/alert/autosuggest/banner/contentplacement/contentplacementitem/divider/glyph/heading/hero/heroitem/highlightfeature/hyperlinkgroup/image/inpagenavigation/list/pagebehaviors/skiptomain/social/typographicintro?apiVersion=1.0&amp;include_base=true"
+        href="../../../stylesheets/banner.css"
         type="text/css" media="all" />
     <link rel="stylesheet"
-        href="http://www.microsoft.com/onerfstatics/marketingsites-wcus-prod/west-european/corporate-responsibility/_scrf/css/themes=default.device=uplevel_web_pc/2d-58d884/17-f310d5/78-a68b8a/3f-e00611/37-dd3a90/ef-a24652?ver=2.0&amp;_cf=20210618"
+        href="../../../stylesheets/default.css"
         type="text/css" media="all" />
 
     <style>
