moved stylesheet back in

--- a/www.microsoft.com/en-us/corporate-responsibility/inclusive-economic-opportunity.html
+++ b/www.microsoft.com/en-us/corporate-responsibility/inclusive-economic-opportunity.html
@@ -51,10 +51,10 @@
 
 
     <link rel="stylesheet"
-        href="../../../stylesheets/banner.css"
+        href="../../stylesheets/banner.css"
         type="text/css" media="all" />
     <link rel="stylesheet"
-        href="../../../stylesheets/default.css"
+        href="../../stylesheets/default.css"
         type="text/css" media="all" />
 
     <style>
