changed links and index image

--- a/www.microsoft.com/en-us/corporate-responsibility/inclusive-economic-opportunity.html
+++ b/www.microsoft.com/en-us/corporate-responsibility/inclusive-economic-opportunity.html
@@ -14,9 +14,9 @@
     <title>First Nations Economic Opportunity | Microsoft CSR</title>
 
     <meta name="twitter:image"
-        content="http://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4GCbg?ver=5904" />
+        content="../../images/background-image.jpg" />
     <meta property="og:image"
-        content="http://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4GCbg?ver=5904" />
+        content="../../images/background-image.jpg" />
     <meta property="og:title" content="First Nations Economic Opportunity | Microsoft CSR" />
     <meta name="twitter:title" content="First Nations Economic Opportunity | Microsoft CSR" />
     <meta name="robots" content="index, follow" />
@@ -2134,7 +2134,7 @@
                                     <div class="c-group">
                                         <a class="c-call-to-action c-glyph" aria-label="Learn about skills for jobs"
                                             data-m='{"cN":"About skills for jobs","cT":"0","id":"n1c2m1r4a2","sN":1,"aN":"c2m1r4a2"}'
-                                            href="skills-employability/career-pathways.html">
+                                            href="https://www.microsoft.com/en-us/corporate-responsibility/skills-employability/career-pathways">
                                             <span>About skills for jobs</span>
                                         </a>
                                         <!-- <a class="c-call-to-action c-glyph"
